Fix font family issue and broken css issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 /*
 Colors used:
 Primary Color (Pigment Blue): #333399;
@@ -9,9 +7,6 @@ Background Color (White): #FFFFFF;
 Text color (Charcoal)   #3D4D4A
 */
 
-
-<body>
-
 img {
   width: 100%;
 }
@@ -20,24 +15,26 @@ img {
   box-sizing: border-box;
 }
 
-body
-header {
+body {
   background-color: #ffffff;
   text-align: center;
   padding: 10px 0;
   margin: 10px;
-  font-family 'Lexend', sans-serif;
+  font-family: "Lexend", sans-serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.6;
   color: #3d4d4a;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   line-height: 1.4;
 }
 h1 {
-  font-size: 2.75em
+  font-size: 2.75em;
   font-weight: 700;
 }
 h2 {
@@ -53,9 +50,8 @@ h4 {
   font-weight: 400;
 }
 
-
 .button {
-  dispaly: inline-block;
+  display: inline-block;
   background-color: #ff9933;
   color: #ffffff;
   font-weight: 400;
@@ -71,14 +67,14 @@ h4 {
 }
 
 .button.contact {
-  background color: transparent;
+  background: transparent;
   color: #336699;
   text-transform: uppercase;
   border: 2px solid #336699;
 }
 
 .button.contact:hover {
-  background color: #336699;
+  background: #336699;
   color: #3d4d4a;
 }
 
@@ -118,16 +114,16 @@ nav > ul > li > a {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: 700;
-  color: #3d4d4a
+  color: #3d4d4a;
 }
 
-nav > ul > li> a: hover {
+nav > ul > li > a:hover {
   transition: 0.3s;
-  background color: #336699
+  background: #336699;
 }
 
 #hero {
-  background-color: #ffffff
+  background-color: #ffffff;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
